Table "accounts" {
  "id" varchar(40) [pk]
  "username" varchar(255) [not null]
  "password" varchar(255) [not null, note: "hash password"]
  "created_at" datetime [not null, default: `CURRENT_TIMESTAMP`, note: '']
  "updated_at" datetime [not null, default: `CURRENT_TIMESTAMP`, note: '']
}

Table "roles" {
  "id" varchar(40) [pk]
  "name" varchar(255) [not null]
}

Table "users" {
  "id" varchar(40) [pk]
  "role_id" varchar(40) [not null]
  "name" varchar(255) [not null]
  "email" varchar(255) [not null]
  "phone_number" varchar(255) [not null]
  "display_names" varchar(255)
  "avatar" varchar(255)
  "gender" varchar(255)
  "birth_of_day" datetime
  "created_at" datetime [not null, default: `CURRENT_TIMESTAMP`, note: '']
  "updated_at" datetime [not null, default: `CURRENT_TIMESTAMP`, note: '']
  "deleted_at" datetime
}

Table "categories" {
  "id" varchar(40) [pk]
  "name" varchar(255) [not null]
}

Table "blogs" {
  "id" varchar(40) [pk]
  "author_id" varchar(40) [not null]
  "title" varchar(255) [not null]
  "thumbnail" text
  "summary" varchar(255)
  "content" text
  "created_at" datetime [not null, default: `CURRENT_TIMESTAMP`, note: '']
  "updated_at" datetime [not null, default: `CURRENT_TIMESTAMP`, note: '']
  "deleted_at" datetime
}

Table "blog_categories" {
  "id" bigint [pk, increment]
  "blog_id" varchar(40) [not null]
  "category_id" varchar(40) [not null]
}

Table "comments" {
  "id" varchar(40) [pk]
  "user_id" varchar(40) [not null]
  "content" text [not null]
  "is_toxicity" bool
  "created_at" datetime [not null, default: `CURRENT_TIMESTAMP`, note: '']
  "updated_at" datetime [not null, default: `CURRENT_TIMESTAMP`, note: '']
  "deleted_at" datetime
}

Table blog_comments {
  "id" bigint [pk, increment]
  "blog_id" varchar(40) [not null]
  "comment_id" varchar(40) [not null]
}

Table "rattings" {
  "id" varchar(40) [pk, increment]
  "user_id" varchar(40) [not null]
  "level" int [not null]
}

Table "blog_rattings" {
  "id" bigint [pk, increment]
  "blog_id" varchar(40) [not null]
  "ratting_id" varchar(40) [not null]
}

Ref: accounts.id - users.id
Ref: roles.id - users.role_id
Ref: blog_categories.category_id > categories.id
Ref: blog_categories.blog_id > blogs.id
Ref: comments.user_id > users.id
Ref: blog_comments.blog_id > blogs.id
Ref: blog_comments.comment_id > comments.id
Ref: blog_rattings.blog_id > blogs.id
Ref: rattings.user_id > users.id
Ref: blog_rattings.ratting_id > rattings.id


